# otus-cpp-home-work

./: CMakeLists.txt  config.json  main.cpp
.github/workflows/: release.yml
tests/boost/: test_version.cpp
tests/gtest/: test_version.cpp
